--- a/locales/es.json
+++ b/locales/es.json
@@ -1,15 +1,133 @@
 {
-    "mainTitle": "Recepción de Experiencia Mini-Capstone de la Facultad de Ingeniería",
-    "reserved": "Reservado",
+    "mainTitle": "Recepción de la Experiencia Mini‑Capstone de la Facultad de Ingeniería",
+    "reserved": "Con reserva",
     "walkIn": "Sin reserva",
     "back": "Volver",
-    "enterFullName": "Por favor, ingrese su nombre completo",
-    "reservedNameInputTitle": "Reservado - Ingrese su nombre",
-    "walkInNameInputTitle": "Sin reserva - Ingrese su nombre",
-    "namePlaceholder": "Ej: Taro Yamada",
-    "checkReservation": "Verificar Reserva",
-    "confirmDetails": "Confirmar sus datos",
+    "enterFullName": "Por favor, ingresa tu nombre completo",
+    "reservedNameInputTitle": "Con reserva - Ingresa tu nombre",
+    "walkInNameInputTitle": "Sin reserva - Ingresa tu nombre",
+    "namePlaceholder": "Ej.: Taro Yamada",
+    "checkReservation": "Verificar reserva",
+    "confirmDetails": "Confirma tus datos",
     "confirmSubmit": "Confirmar",
     "changeReservation": "Cambiar preferencias",
-    "name": "Nombre"
+    "name": "Nombre",
+    "furigana": "Furigana",
+    "furiganaPlaceholder": "Ej.: YAMADA TARO",
+    "requiredMark": "Obligatorio",
+    "school": "Nombre de la escuela",
+    "schoolPlaceholder": "Ej.: Escuela Secundaria Ejemplo",
+    "grade": "Curso",
+    "selectGrade": "Selecciona una opción",
+    "grade1": "1.º de preparatoria",
+    "grade2": "2.º de preparatoria",
+    "grade3": "3.º de preparatoria",
+    "other": "Otro",
+    "toProgramSelection": "Seleccionar programa de experiencia Capstone",
+    "noCapstoneExperience": "Para quienes solo asisten a la sesión informativa de la Facultad de Ingeniería",
+    "selectProgramTitle": "Selecciona tus programas preferidos",
+    "selectProgramDesc": "Puedes seleccionar hasta 3 preferencias.",
+    "confirmChoices": "Confirmar selección",
+    "successTitle": "¡Registro completado!",
+    "successDesc": "Has sido confirmado para el siguiente programa:",
+    "successWaiting": "Tu programa será asignado más tarde.",
+    "backToHome": "Volver al inicio",
+    "adminPanel": "Panel de administración",
+    "tabProgramEdit": "Edición de programas",
+    "tabFileLoad": "Cargar archivos",
+    "tabRoster": "Vista previa del listado",
+    "tabStatus": "Estado de recepción",
+    "tabSettings": "Configuración",
+    "showTranslation": "Mostrar traducción al inglés",
+    "jsonEditor": "Ver/editar JSON",
+    "applyJson": "Aplicar JSON",
+    "addProgram": "+ Agregar programa",
+    "saveChanges": "Guardar cambios",
+    "fileUpload1": "① Listado de reservas de la Experiencia Mini‑Capstone (xlsx)",
+    "fileUpload2": "② Listado de la sesión informativa de la Facultad de Ingeniería (xlsx)",
+    "loadProgress": "③ Cargar progreso (.json)",
+    "rosterReservations": "Listado de reservas de la Experiencia Mini‑Capstone",
+    "rosterBriefing": "Listado de la sesión informativa de la Facultad de Ingeniería",
+    "rosterOthers": "Otros",
+    "rosterSearchPlaceholder": "Buscar por nombre/Furigana",
+    "statusConfirmed": "Confirmado",
+    "statusWaiting": "En espera",
+    "statusNotRegistered": "No registrado",
+    "confirmedList": "Lista de confirmados",
+    "waitingList": "Lista de espera",
+    "assignWaiting": "Asignar en espera",
+    "saveProgress": "Guardar progreso",
+    "exportData": "Exportar",
+    "exportSelect": "Seleccionar formato de exportación",
+    "exportExcelBtn": "Excel",
+    "exportPdfBtn": "PDF",
+    "prioritizeReserved": "Priorizar participantes con reserva",
+    "prioritizeDesc": "Cuando está ACTIVADO, los participantes sin reserva quedarán en 'En espera'. Tras completar todos los registros, asígnalos desde la pestaña 'Estado de recepción' con el botón 'Asignar en espera'.",
+    "prioritizeGrade": "Priorizar por curso (para sin reserva)",
+    "prioritizeGradeDesc": "Si está ACTIVADO, los participantes en espera se asignan por curso (3.º → 2.º → 1.º → Otros). Si está DESACTIVADO, por orden de llegada.",
+    "resetData": "Restablecer datos de recepción",
+    "backToReception": "Volver a la pantalla de recepción",
+    "adminLogin": "Inicio de sesión de administrador",
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "login": "Iniciar sesión",
+    "logout": "Cerrar sesión",
+    "cancel": "Cancelar",
+    "choice1": "1.ª preferencia",
+    "choice2": "2.ª preferencia",
+    "choice3": "3.ª preferencia",
+    "nameHeader": "Nombre",
+    "programHeader": "Programa",
+    "statusHeader": "Estado (personas)",
+    "attendeesHeader": "Asistentes",
+    "waitingHeader": "En espera de asignación",
+    "furiganaHeader": "Furigana",
+    "timeHeader": "Hora",
+    "noAttendees": "Aún no hay",
+    "unselected": "Sin seleccionar",
+    "titleLabel": "Título",
+    "descriptionLabel": "Descripción",
+    "capacityLabel": "Cupo",
+    "deleteButton": "Eliminar",
+    "autoTranslate": "Traducir automáticamente al inglés",
+    "titleEnLabel": "Título (inglés)",
+    "descriptionEnLabel": "Descripción (inglés)",
+    "full": "Este programa está completo",
+    "cardView": "Vista de tarjetas",
+    "totalConfirmed": "Total confirmados",
+    "totalWaiting": "Total en espera",
+    "totalAttendees": "Total registrados",
+    "scheduleTitle": "Horario",
+    "companionsCountLabel": "Número de acompañantes",
+    "noCapstoneTitle": "Registro completado",
+    "noCapstoneDesc": "Se ha completado tu registro para no participar en la experiencia Capstone.",
+    "noCapstoneInfo": "Si solo asistirás a la sesión informativa, por favor regístrate por separado.",
+    "nameSpaceNote": "※ Introduce un espacio entre apellido y nombre",
+    "errorEnterName": "Por favor, ingresa tu nombre.",
+    "errorNotFound": "No se encontró la reserva. Verifica el nombre o regístrate como sin reserva.",
+    "errorAllFields": "Completa todos los campos obligatorios.",
+    "errorSelectProgram": "Selecciona al menos un programa.",
+    "errorJsonFormat": "Formato JSON no válido.",
+    "infoJsonApplied": "Datos aplicados desde JSON.",
+    "infoChangesSaved": "Cambios guardados.",
+    "settingsSaved": "Configuración guardada.",
+    "errorProgramFull": "Este programa está completo. Elige otro.",
+    "errorInvalidProgram": "Datos de programa no válidos. Elige otro.",
+    "errorDuplicateChoices": "No puedes seleccionar el mismo programa en varias preferencias.",
+    "errorUnexpected": "Ocurrió un error inesperado. Inténtalo de nuevo.",
+    "assignComplete": "La asignación para {count} personas se ha completado.",
+    "noWaiting": "No hay participantes en la lista de espera.",
+    "noRosterData": "Aún no se han importado datos de listados. Importa el archivo desde el panel de administración.",
+    "resetConfirm": "Se restablecerán todos los datos de recepción (listas de confirmados y de espera). Esta acción no se puede deshacer. ¿Deseas continuar?",
+    "resetComplete": "Datos restablecidos. La página se recargará ahora.",
+    "reloadDisabled": "La recarga está deshabilitada en esta página para evitar la pérdida de datos.",
+    "errorAlreadyRegistered": "Ya estás registrado o en la lista de espera.",
+    "wrongPassword": "Contraseña incorrecta.",
+    "noChoicesProvided": "No proporcionaste preferencias de programa con tu reserva, por lo que debes seleccionarlas ahora.",
+    "noCapstoneBriefingTime": "{name}, tu sesión informativa de la Facultad de Ingeniería comienza a las {time}.",
+    "languageSelfName": "Español",
+    "languageSwitchedTo": "Idioma cambiado a {lang}.",
+    "mappingTitle": "Configurar mapeo de columnas",
+    "mappingApply": "Aplicar",
+    "mappingCancel": "Cancelar"
 }
