--- a/locales/en.json
+++ b/locales/en.json
@@ -129,5 +129,11 @@
     "languageSwitchedTo": "Language switched to {lang}.",
     "mappingTitle": "Set Column Mapping",
     "mappingApply": "Apply",
-    "mappingCancel": "Cancel"
+    "mappingCancel": "Cancel",
+    "themeLight": "Light Mode",
+    "themeDark": "Dark Mode",
+    "themeLiquid": "Liquid Glass Mode",
+    "liquidActivated": "Liquid Glass mode activated.",
+    "lightActivated": "Light mode activated.",
+    "darkActivated": "Dark mode activated."
 }
