--- a/locales/en.json
+++ b/locales/en.json
@@ -39,13 +39,10 @@
     "tabStatus": "Reception Status",
     "tabSettings": "Settings",
     "showTranslation": "Show English Translation",
-    "jsonEditor": "View/Edit JSON",
-    "applyJson": "Apply JSON",
     "addProgram": "+ Add Program",
     "saveChanges": "Save Changes",
     "fileUpload1": "① Mini-Capstone Experience Reservation Roster (xlsx)",
     "fileUpload2": "② Faculty of Engineering Briefing Session Roster (xlsx)",
-    "loadProgress": "③ Load Progress (.json)",
     "rosterReservations": "Mini-Capstone Experience Reservation Roster",
     "rosterBriefing": "Faculty of Engineering Briefing Session Roster",
     "rosterOthers": "Others",
@@ -56,7 +53,6 @@
     "confirmedList": "Confirmed List",
     "waitingList": "Waiting List",
     "assignWaiting": "Assign Waiting Participants",
-    "saveProgress": "Save Progress",
     "exportData": "Export",
     "exportSelect": "Select Export Format",
     "exportExcelBtn": "Excel",
@@ -135,5 +131,11 @@
     "themeLiquid": "Liquid Glass Mode",
     "liquidActivated": "Liquid Glass mode activated.",
     "lightActivated": "Light mode activated.",
-    "darkActivated": "Dark mode activated."
+    "darkActivated": "Dark mode activated.",
+    "offlineRequiredTitle": "Network Connection Required",
+    "offlineRequiredDesc": "This application requires an internet connection. Please check your network and try again.",
+    "offlineToastMessage": "Unable to reach the network",
+    "errorNetworkUnavailable": "Network connection lost. Please check your connection and try again.",
+    "errorDatabaseWriteFailed": "Failed to save to the database. Please contact staff for assistance.",
+    "notificationDatabaseSaved": "Data saved successfully."
 }
