--- a/locales/ja.json
+++ b/locales/ja.json
@@ -39,13 +39,10 @@
     "tabStatus": "受付状況",
     "tabSettings": "設定",
     "showTranslation": "英語翻訳表示",
-    "jsonEditor": "JSON表示/編集",
-    "applyJson": "JSONを適用",
     "addProgram": "＋ プログラムを追加",
     "saveChanges": "変更を保存",
     "fileUpload1": "① ミニキャップストーン体験 予約者名簿 (xlsx)",
-    "fileUpload2": "② 工学部説明会 予約者名簿 (xlsx)",
-    "loadProgress": "③ 進行状況を読み込む (.json)",
+    "fileUpload2": "② 工学部説明会 参加者名簿 (xlsx)",
     "rosterReservations": "ミニキャップストーン体験 予約者名簿",
     "rosterBriefing": "工学部説明会 参加者名簿",
     "rosterOthers": "その他",
@@ -56,7 +53,6 @@
     "confirmedList": "確定済みリスト",
     "waitingList": "待機者リスト",
     "assignWaiting": "待機者を一括割り当て",
-    "saveProgress": "進行状況を保存",
     "exportData": "書き出し",
     "exportSelect": "書き出し形式を選択",
     "exportExcelBtn": "Excel",
@@ -135,5 +131,11 @@
     "themeLiquid": "リキッドグラスモード",
     "liquidActivated": "リキッドグラスモードに切り替わりました。",
     "lightActivated": "ライトモードに切り替わりました。",
-    "darkActivated": "ダークモードに切り替わりました。"
+    "darkActivated": "ダークモードに切り替わりました。",
+    "offlineRequiredTitle": "ネットワーク接続が必要です",
+    "offlineRequiredDesc": "このアプリを利用するにはインターネット接続が必要です。接続を確認してください。",
+    "offlineToastMessage": "ネットワークに接続できません",
+    "errorNetworkUnavailable": "ネットワークに接続できません。接続を確認して再度お試しください。",
+    "errorDatabaseWriteFailed": "データベースに保存できませんでした。スタッフにお問い合わせください。",
+    "notificationDatabaseSaved": "データを保存しました。"
 }
